# us-stock-scorer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: main.tsx  styles.css  styles.test.ts
apps/admin/src/api/: client.test.ts  client.ts
apps/api/: .env.example  pyproject.toml
apps/api/fixtures/: stocks.json
apps/api/src/stock_scorer/: admin_models.py  app.py  auth.py  backtesting.py  cli.py  fixtures.py  history_sync.py  live_scoring.py  market_data.py  models.py  research_store.py  score_service.py  score_snapshots.py  scoring.py  strategy_evolution.py
apps/api/tests/: test_api.py  test_backtesting.py  test_cli.py  test_history_sync.py  test_market_data.py  test_research_store.py  test_score_snapshots.py  test_scoring.py  test_strategy_evolution.py
apps/miniprogram/: app.js  app.json  app.ts  app.wxss  package.json  project.config.json  tsconfig.json
apps/miniprogram/utils/: api-client-runtime.ts  api.js  api.ts
apps/research/: README.md
deploy/: install-production.sh
deploy/nginx/: us-stock-scorer.conf.template
deploy/systemd/: us-stock-scorer-api.service  us-stock-scorer-backtest.service  us-stock-scorer-backtest.timer
docs/deployment/: nginx.md
docs/superpowers/plans/: 2026-05-20-monorepo-mvp-implementation.md  2026-05-22-typescript-migration.md  2026-05-23-field-fill-data-source-merge.md  2026-05-23-market-data-fallback.md  2026-05-26-backtesting-and-strategy-evolution.md
test/: repository.test.ts
(+25 files in other folders)
